# StegTool

./: .gitignore  CMakeLists.txt  README.md
StegApp/: StegApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
StegApp/forms/: mainwindow.ui
StegApp/headers/: Image.h  mainwindow.h
StegApp/imgs/: 1-channel_input.txt  3-channel_input.txt  4-channel_input.txt  input_txt.txt
StegApp/src/: Image.cpp  main.cpp  mainwindow.cpp
build-StegApp-Desktop-Debug/: Makefile  StegApp  moc_mainwindow.cpp  ui_mainwindow.h
headers/: Image.h
src/: Image.cpp  main.cpp
